Closed Bug 1453873 Opened 6 years ago Closed 6 years ago

Incorrect focus events for <select size="1"> with JAWS

Categories

(Core :: Disability Access APIs, defect)

All
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox-esr52 --- unaffected
firefox59 --- wontfix
firefox60 --- fixed
firefox61 --- verified

People

(Reporter: Jamie, Assigned: Jamie)

Details

Attachments

(1 file)

STR:
1. Start JAWS and Firefox.
2. Open this URL:
data:text/html,<select size="1"><option>a</option><option>b</option></select>
3. Tab to the combo box.
4. Start watching focus win events with your tool of choice (e.g. AccEvent).
5. Press alt+downArrow to open the combo box.
6. press down arrow.
Expected: You should only see focus events for options inside the XUL dropdown control (which come from their own pop-up MozillaWindowClass window).
Actual: You see focus events for options in both the XUL dropdown (MozillaWindowClass) and the combo box beneath the document (MozillaContentWindowClass due to HWND emulation).

This is due to a hack implemented in bug 703198 back in 2011. At that time, JAWS required focus events for selection changes in a collapsed combo box. However, this is problematic with e10s because now, for an expanded combo box, the real focus events come from the XUL dropdown implemented in the parent process, which is not associated with the document a11y tree in any way. JAWS seems to cope just fine with value changes for Firefox combo boxes now and VFO have agreed that this is the correct path forward.

Note that we no longer have to worry about old JAWS versions because we simply don't support them any more.
To be super clear, this is required in order for expanded combo boxes to work correctly with JAWS + Firefox + e10s.
Comment on attachment 8967623 [details]
Bug 1453873: Stop firing accessible focus events for JAWS when combo box options are selected.

https://reviewboard.mozilla.org/r/236350/#review242108

Nice! Thank you! It's good to get rid of hacks. :)

::: commit-message-cfe63:9
(Diff revision 1)
> +At that time, JAWS required focus events for selection changes in a collapsed combo box.
> +However, these events also fire for expanded combo boxes.
> +This is problematic with e10s because now, for an expanded combo box, the real focus events come from the XUL dropdown implemented in the parent process, which is not associated with the document a11y tree in any way.
> +JAWS seems to cope just fine with value changes for Firefox combo boxes now and VFO have agreed that this is the correct path forward.
> +
> +try: -b o -p win64 -u none -t none

Please remove this try syntax line before landing. :)
Attachment #8967623 - Flags: review?(mzehe) → review+
Also, please request beta approval for 60.
Pushed by jteh@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ad1a87f7ffa5
Stop firing accessible focus events for JAWS when combo box options are selected. r=MarcoZ
https://hg.mozilla.org/mozilla-central/rev/ad1a87f7ffa5
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Verified fixed in Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:61.0) Gecko/20100101 Firefox/61.0 ID:20180415220108
Comment on attachment 8967623 [details]
Bug 1453873: Stop firing accessible focus events for JAWS when combo box options are selected.

Approval Request Comment
[Feature/Bug causing the regression]: E10s Windows accessibility.
[User impact if declined]: Users of the JAWS screen reader will not be able to use expanded <select> controls correctly.
[Is this code covered by automated tests?]: No; no ability to test with third party accessibility tools.
[Has the fix been verified in Nightly?]: Yes.
[Needs manual test from QE? If yes, steps to reproduce]: No.
[List of other uplifts needed for the feature/fix]: None.
[Is the change risky?]: No.
[Why is the change risky/not risky?]: Removal of previous hack limited to the presence of a specific third party product (and the product's vendor have signed off on this).
[String changes made/needed]: None.
Attachment #8967623 - Flags: approval-mozilla-beta?
Comment on attachment 8967623 [details]
Bug 1453873: Stop firing accessible focus events for JAWS when combo box options are selected.

a11y fix for interop with jaws, approved for 60.0b13
Attachment #8967623 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: